--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -25,8 +25,8 @@
                     <input id="passwordRegister" type="password" name="passwordRegister" class="validate">
                 </div>
                 <div class="input-field col l6">
-                    <label class="active" for="birthDateRegister">Geburtstag</label>
-                    <input placeholder="" type="date" id="birthDateRegister" name="birthDateRegister" class="validate">
+                    <label for="birthDateRegister">Geburtstag</label>
+                    <input type="text" id="birthDateRegister" name="birthDateRegister" class="datepicker">
                 </div>
             </div>
 
@@ -42,9 +42,23 @@
             </div>
 
             <div class="row">
+                <div class="input-field col l12 file-field">
+                    <div class="file-path-wrapper col l10">
+                        <input class="file-path validate" type="text"
+                               placeholder="Profilbild auswählen"/>
+                    </div>
+                    <div class="btn col l2">
+                        <span>Browse</span>
+                        <input type="file"/>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
                 <div class="input-field col l12">
                     <label for="descriptionRegister">Kurzbeschreibung</label>
-                    <textarea id="descriptionRegister" name="descriptionRegister" class="materialize-textarea" maxlength="600"></textarea>
+                    <textarea id="descriptionRegister" name="descriptionRegister" class="materialize-textarea"
+                              maxlength="600"></textarea>
                     <span class="helper-text">Maximal 400 Zeichen</span>
                 </div>
             </div>
@@ -53,4 +67,9 @@
         </form>
     </div>
 </div>
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        let elems = document.querySelectorAll('.datepicker');
+        let instances = M.Datepicker.init(elems, options);
+    });</script>
 {{> bottomInclude }}
