--- a/src/frontend/views/createSearch.hbs
+++ b/src/frontend/views/createSearch.hbs
@@ -50,15 +50,9 @@
                     <label for="searchDate">Ab wann wird gesucht</label>
                     <input type="text" id="searchDate" name="searchDate" class="datepicker">
                 </div>
-                <div class="col l6 input-field">
-                    <label class="active" for="searchDuration">Suchdauer</label>
-                    <select name="searchDuration" id="searchDuration">
-                        <option value="Unbekannt" selected>Unbekannt</option>
-                        <option value="<1 Woche"><1 Woche</option>
-                        <option value="1-2 Woche">1-2 Woche</option>
-                        <option value="2-3 Woche">2-3 Woche</option>
-                        <option value="3-4 Woche">3-4 Woche</option>
-                    </select>
+                <div class="input-field col l6">
+                    <label for="searchPLZ">PLZ der Suchregion</label>
+                    <input type="number" name="searchPLZ" id="searchPLZ" class="validate">
                 </div>
             </div>
 
