--- a/src/frontend/views/partials/navbar.hbs
+++ b/src/frontend/views/partials/navbar.hbs
@@ -9,8 +9,8 @@
                 <li><a id="" href="/register">Register</a></li>
                 <li><a id="" href="/profile">Profile</a></li>
                 <li><a id="" href="/create-search">Suche erstellen</a></li>
-                <li><a id="" href="/create-offer">Angebot Erstellen</a></li>
-                <li><a id="" href="/create-animal">Tier eErstellen</a></li>
+                <li><a id="" href="/create-offer">Angebot erstellen</a></li>
+                <li><a id="" href="/create-animal">Tier erstellen</a></li>
             </ul>
         </div>
 
