--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -70,6 +70,7 @@
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         let elems = document.querySelectorAll('.datepicker');
+        let options;
         let instances = M.Datepicker.init(elems, options);
     });</script>
 {{> bottomInclude }}
