--- a/src/frontend/views/createOffer.hbs
+++ b/src/frontend/views/createOffer.hbs
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="input-field col l6">
                     <label for="searchPLZ">PLZ</label>
-                    <input type="number" name="searchPLZ" id="searchPLZ" class="validate">
+                    <input type="text" name="searchPLZ" id="searchPLZ" class="validate">
                 </div>
                 <div class="col l6"></div>
             </div>
