--- a/src/frontend/views/partials/containerOffer_Owner.hbs
+++ b/src/frontend/views/partials/containerOffer_Owner.hbs
@@ -1,23 +1,25 @@
 <div class="col s12 m12">
-                    <div class="card horizontal">
-                        <div class="card-image" id="image-Container">
-                            <img src={{this.Picture}} alt="Tier Bild">
-                        </div>
-                        <div class="card-stacked" id="info">
-                            <div class="card-content">
-                                <p class="flow-text">Name: {{this.name}}</p>
-                                <p class="flow-text">VorName: {{this.lastname}}</p>
-                                <p class="flow-text">Größe: {{this.age}}</p>
-                            </div>
-                            <div class="card-content">
-                            <!-- TODO -->
-                                <p>Beschreibung.BeschreibungBeschreibung
-                                BeschreibungBeschreibungBeschreibungBeschreibung</p>
-                            </div>
-                            <div class="card-action center-align">
+    <div class="card horizontal">
+        <div class="card-image" id="image-Container">
+            <img src={{this.Picture}} alt="Personen Bild">
+        </div>
+        <div class="card-stacked" id="info">
+            <div class="card-content">
+                <p class="flow-text">Name: {{this.name}}</p>
+                <p class="flow-text">VorName: {{this.lastname}}</p>
+                <p class="flow-text">Größe: {{this.age}}</p>
+            </div>
+            <div class="card-content">
+                <div></div>
+                <p>Beschreibung.BeschreibungBeschreibung
+                    BeschreibungBeschreibungBeschreibungBeschreibung</p>
+            </div>
 
-                                <a href="#">Anfragen</a>
-                            </div>
-                        </div>
-                    </div>
-          </div>
+            <div class="card-action center-align box">
+                <a class="btn-flat" href="#popup1">Anfragen</a>
+            </div>
+
+        </div>
+    </div>
+</div>
+<script type="text/javascript" src="assets/js/search.js"></script>
