--- a/src/frontend/views/searchOffer.hbs
+++ b/src/frontend/views/searchOffer.hbs
@@ -12,17 +12,16 @@
     <div class="row s12 l12 xl12">
 
         <div class="row ">
-            <div id="test1" class="col s12 l3 xl3 filteroffer">
+            <div class="col s12 l3 xl3 filteroffer">
                 {{>filterOffer}}
             </div>
             <div class="col s1 l1 xl1">
             </div>
-            <div id="#test2" class="col s12 l8 xl8 filteroffer">
+            <div class="col s12 l8 xl8 filteroffer">
                 {{>containerOffer_Owner}}
-
             </div>
         </div>
     </div>
 
-
 {{>bottomInclude}}
+<script type="text/javascript" src="assets/js/popup.js"></script>
