--- a/src/frontend/views/partials/filterOffer.hbs
+++ b/src/frontend/views/partials/filterOffer.hbs
@@ -1,8 +1,12 @@
-<form class="filterForm">
+<form class="filterForm" method="post" action="/filter/submit">
     <!-- radius (suchkreis) -->
     <div class="row filterGroup">
-        <label>Radius:</label>
-        <select class="sc-input" data-test="zipRadius">
+        <label for="PLZ">Postleitzahl:</label>
+        <input class="col l12 xl12 s12" name="PLZ" type="text" placeholder="Ihre PLZ..."
+               pattern="^(([1-9]{1}[0-9]{4})|([0-9]{1}[1-9]{1}[0-9]{3}))$" onchange="handlePLZ(this);">
+    </div>
+    <div class="row filterGroup">
+        <select name="radius" class="sc-input col l12 xl12 s12" data-test="zipRadius">
             <option selected="" value="null">Umkreis</option>
             <option value="1">1 km</option>
             <option value="2">2 km</option>
@@ -27,7 +31,7 @@
     <!-- Geschlecht Tier -->
     <div class="row">
         <label for="gender">Geschlecht des Tieres:</label>
-        <select id="gender">
+        <select id="gender" name="gender">
             <option value="male">Männlich</option>
             <option value="female">Weiblich</option>
             <option value="divers">Männlich kastriert</option>
@@ -45,64 +49,49 @@
     <!-- Alter-->
     <div class="row filterGroup">
         <label for="age">Alter:</label><br>
-        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="0" max="24" placeholder="Anfang"
-               pattern="[0-9]{3}0" onchange="handleChange(this,0,24);">
-        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="1" max="25" placeholder="Ende"
-               pattern="[0-9]{3}0" onchange="handleChange(this,1,25);">
+        <input name="agestart" class="col l6 xl6 s6" type="number" id="end" name="end" min="0" max="24" placeholder="Anfang"
+               pattern="[0-9]{3}0" onchange="handleChange(this);">
+        <input name="ageend" class="col l6 xl6 s6" type="number" id="end" name="end" min="1" max="25" placeholder="Ende"
+               pattern="[0-9]{3}0" onchange="handleChange(this);">
     </div>
     <!-- Rasse -->
     <div class="row">
 
         <label for="breed">Rasse</label>
-        <select class="filterDropDowns" id="breed">
+        <select name="breed" class="filterDropDowns" id="breed">
             {{#each page.breed}}
                 <option value="{{this.uuid}}">{{this.name}}</option>
             {{/each}}
         </select>
     </div>
-    <!-- Weitere Filter -->
 
     <!-- Groesse -->
 
     <div class="row filterGroup">
         <label for="age">Größe(in cm):</label><br>
-        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="0" max="149" placeholder="Anfang"
+        <input name="heightstart" class="col l6 xl6 s6" type="number" id="end" name="end" min="0" max="149" placeholder="Anfang"
                pattern="[0-9]{3}" onchange="handleChange(this);">
-        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="1" max="150" placeholder="Ende"
+        <input name="heightend" class="col l6 xl6 s6" type="number" id="end" name="end" min="1" max="150" placeholder="Ende"
                pattern="[0-9]{3}" onchange="handleChange(this);">
     </div>
 
     <!-- Gewicht -->
     <div class="row filterGroup">
         <label for="age">Gewicht:</label><br>
-        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="0" max="98" placeholder="Anfang"
+        <input name="weightstart" class="col l6 xl6 s6" type="number" id="end" name="end" min="0" max="98" placeholder="Anfang"
                pattern="[0-9]{2}" onchange="handleChange(this);">
-        <input class="col l6 xl6 s6" type="number" id="end" name="end" min="1" max="99" placeholder="Ende"
+        <input name="weightend" class="col l6 xl6 s6" type="number" id="end" name="end" min="1" max="99" placeholder="Ende"
                pattern="[0-9]{2}" onchange="handleChange(this);">
     </div>
 
-    <!-- Dringlichkeit -->
-    <div class="row ">
-        <label for="urgency">Dringlichkeit:</label>
-        <p>
-            <label>
-                <input class="with-gap" name="urgency" type="radio" checked/>
-                <span>Benötigt</span>
-            </label>
-        </p>
-        <p>
-            <label>
-                <input class="with-gap" name="urgency" type="radio" checked/>
-                <span>Freiwillig</span>
-            </label>
-        </p>
+    <div class="row  center-align">
+        <button class="row s12 l12 xl12 filter center-align btn-large waves-effect waves-light" type="submit" name="action">Submit
+            <i class="material-icons right">search</i>
+        </button>
     </div>
-
-    <div class="row">
-    </div>
-
 
 </form>
-<script type="text/javascript"  src="assets/js/handleInputfield.js"></script>
+<script type="text/javascript" src="assets/js/handleInputfield.js"></script>
+<script type="text/javascript" src="assets/js/handlePLZ.js"></script>
 
 
