--- a/src/frontend/views/partials/header.hbs
+++ b/src/frontend/views/partials/header.hbs
@@ -12,4 +12,5 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/global.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/userprofile.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/search.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/popup.css">
 </head>
