removed jwt and implemented session auth

--- a/src/frontend/views/login.hbs
+++ b/src/frontend/views/login.hbs
@@ -6,7 +6,7 @@
 </div>
 <div class="container">
     <div class="loginInput row">
-        <form class="col l12" method="post" action="/login/submit">
+        <form class="col l12" method="post" action="/auth/login">
             <div class="row">
                 <div class="input-field col l12">
                     <label for="emailLogin">Email</label>
