--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="input-field col l12 file-field">
                     <div class="file-path-wrapper col l10">
-                        <input class="file-path validate" type="text"
+                        <input class="file-path validate" type="text" name="fileRegister"
                                placeholder="Profilbild auswählen"/>
                     </div>
                     <div class="btn col l2">
