--- a/src/frontend/views/searchOffer.hbs
+++ b/src/frontend/views/searchOffer.hbs
@@ -18,7 +18,130 @@
             <div class="col s1 l1 xl1">
             </div>
             <div class="col s12 l8 xl8 filteroffer">
-                {{>containerOffer_Owner}}
+                <!--provisorisch -->
+                <div class="col s12 m12">
+                    <div class="card horizontal">
+                        <div class="card-image" id="image-Container">
+                            <img src="assets/img/cat2.jpg" alt="Tier Bild">
+                        </div>
+                        <div class="card-stacked" id="info">
+                            <div class="card-content">
+                                <p class="flow-text">Name: Nelly</p>
+                                <p class="flow-text">Größe: 30cm</p>
+                                <p class="flow-text">Gewicht: 15kg</p>
+                            </div>
+                            <div class="card-content">
+                                <p>Ich suche hier mit dieser Anzeige jemanden, der sich um meine Katze kümmern kann,
+                                    während ich im Urlaub bin. Dazu gehört das tägliche Füttern und einmal die Woche das
+                                    Katzenklo reinigen. Wenns passt auch gerne mit dem Tier ein wenig spielen,
+                                    ist jedoch kein muss. Sonstige Besonderheite gibt es bei meiner Katze keine,
+                                    sprich keine Krankheiten o.ä. Somit sind auch wenige Vorerfahrungen notwenidg,
+                                    lediglich würde ich es bevorzugen, wenn Sie auch  Katzenbesitzer/in sind.</p>
+                            </div>
+                            <div class="card-action center-align box">
+                                <a class="btn-flat modal-trigger" href="#terms">Anfragen</a>
+                            </div>
+
+                            <div class="modal" id="terms">
+                                <div class="modal-content center-align">
+                                    <h5>Zustimmen </h5>
+                                    <ul>
+                                        <li>Ihre persönlichen Daten werden übersand</li>
+                                        <li>Sie stellen eine Anfrage das Angebot anzunehmen</li>
+                                        <li>Sie stellen eine Anfrage zur Kontaktaufnahme</li>
+                                    </ul>
+                                </div>
+                                <div class="modal-footer center-align">
+                                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Zustimmen und Schliessen</a>
+                                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Abbrechen</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m12">
+                    <div class="card horizontal">
+                        <div class="card-image" id="image-Container">
+                            <img src="assets/img/cat1.jpg" alt="Tier Bild">
+                        </div>
+                        <div class="card-stacked" id="info">
+                            <div class="card-content">
+                                <p class="flow-text">Name: Klara</p>
+                                <p class="flow-text">Größe: 25cm</p>
+                                <p class="flow-text">Gewicht: 10kg</p>
+                            </div>
+                            <div class="card-content">
+                                <p>Ich suche hier mit dieser Anzeige jemanden, der sich um meine Katze kümmern kann,
+                                    während ich im Urlaub bin. Dazu gehört das tägliche Füttern und einmal die Woche das
+                                    Katzenklo reinigen. Wenns passt auch gerne mit dem Tier ein wenig spielen,
+                                    ist jedoch kein muss. Sonstige Besonderheite gibt es bei meiner Katze keine,
+                                    sprich keine Krankheiten o.ä. Somit sind auch wenige Vorerfahrungen notwenidg,
+                                    lediglich würde ich es bevorzugen, wenn Sie auch  Katzenbesitzer/in sind.</p>
+                            </div>
+                            <div class="card-action center-align box">
+                                <a class="btn-flat modal-trigger" href="#terms">Anfragen</a>
+                            </div>
+
+                            <div class="modal" id="terms">
+                                <div class="modal-content center-align">
+                                    <h5>Zustimmen </h5>
+                                    <ul>
+                                        <li>Ihre persönlichen Daten werden übersand</li>
+                                        <li>Sie stellen eine Anfrage das Angebot anzunehmen</li>
+                                        <li>Sie stellen eine Anfrage zur Kontaktaufnahme</li>
+                                    </ul>
+                                </div>
+                                <div class="modal-footer center-align">
+                                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Zustimmen und Schliessen</a>
+                                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Abbrechen</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m12">
+                    <div class="card horizontal">
+                        <div class="card-image" id="image-Container">
+                            <img src="assets/img/cat3.jpg" alt="Tier Bild">
+                        </div>
+                        <div class="card-stacked" id="info">
+                            <div class="card-content">
+                                <p class="flow-text">Name: Simba</p>
+                                <p class="flow-text">Größe: 15cm</p>
+                                <p class="flow-text">Gewicht: 12kg</p>
+                            </div>
+                            <div class="card-content">
+                                <p>Ich suche hier mit dieser Anzeige jemanden, der sich um meine Katze kümmern kann,
+                                    während ich im Urlaub bin. Dazu gehört das tägliche Füttern und einmal die Woche das
+                                    Katzenklo reinigen. Wenns passt auch gerne mit dem Tier ein wenig spielen,
+                                    ist jedoch kein muss. Sonstige Besonderheite gibt es bei meiner Katze keine,
+                                    sprich keine Krankheiten o.ä. Somit sind auch wenige Vorerfahrungen notwenidg,
+                                    lediglich würde ich es bevorzugen, wenn Sie auch  Katzenbesitzer/in sind.</p>
+                            </div>
+                            <div class="card-action center-align box">
+                                <a class="btn-flat modal-trigger" href="#terms">Anfragen</a>
+                            </div>
+
+                            <div class="modal" id="terms">
+                                <div class="modal-content center-align">
+                                    <h5>Zustimmen </h5>
+                                    <ul>
+                                        <li>Ihre persönlichen Daten werden übersand</li>
+                                        <li>Sie stellen eine Anfrage das Angebot anzunehmen</li>
+                                        <li>Sie stellen eine Anfrage zur Kontaktaufnahme</li>
+                                    </ul>
+                                </div>
+                                <div class="modal-footer center-align">
+                                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Zustimmen und Schliessen</a>
+                                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Abbrechen</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
     </div>
