--- a/src/frontend/views/createOffer.hbs
+++ b/src/frontend/views/createOffer.hbs
@@ -1,7 +1,7 @@
 {{ setVar "title" "Angebot erstellen" }}
 {{> topInclude }}
 <div class="container">
-    <h2>Angebot erstellen</h2>
+    <h2>Hilfe anbieten</h2>
     <hr id="siteHeaderUnderline">
 </div>
 <div class="container">
@@ -37,7 +37,7 @@
             <div class="row">
                 <div class="input-field col l6">
                     <label for="searchPLZ">PLZ</label>
-                    <input type="text" name="searchPLZ" id="searchPLZ" class="validate">
+                    <input type="text" name="offerPLZ" id="offerPLZ" class="validate">
                 </div>
                 <div class="col l6"></div>
             </div>
