--- a/src/frontend/views/partials/footer.hbs
+++ b/src/frontend/views/partials/footer.hbs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col l4 s12">
-                <h5 class="white-text">Haustierpflegevermittlung</h5>
+                <h5 class="white-text">Pet-Helpers</h5>
                 <p class="grey-text text-lighten-4">Projekt des #wirvsvirus Hackathons der Bundesregierung</p>
             </div>
             <div class="col l8 s12">
