--- a/src/frontend/views/partials/navbar.hbs
+++ b/src/frontend/views/partials/navbar.hbs
@@ -1,16 +1,14 @@
 <div class="navbar-fixed">
     <nav>
         <div class="nav-wrapper container">
-            <a href="/" class="brand-logo">WirVsVirus</a>
+            <a href="/" class="brand-logo">Pet-Helper</a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a id="" href="/searchOffer">Suche</a></li>
+                <li><a id="" href="/searchOffer">Einträge durchsuchen</a></li>
+                <li><a id="" href="/create-search">Hilfe suchen</a></li>
+                <li><a id="" href="/create-offer">Hilfe anbieten</a></li>
                 <li><a id="" href="/login">Login</a></li>
-                <li><a id="" href="/register">Register</a></li>
-                <li><a id="" href="/profile">Profile</a></li>
-                <li><a id="" href="/create-search">Suche erstellen</a></li>
-                <li><a id="" href="/create-offer">Angebot erstellen</a></li>
-                <li><a id="" href="/create-animal">Tier erstellen</a></li>
+                <li><a id="" href="/register">Registrieren</a></li>
             </ul>
         </div>
 
