Deleted hard coded

--- a/src/frontend/views/partials/containerOffer_Owner.hbs
+++ b/src/frontend/views/partials/containerOffer_Owner.hbs
@@ -29,8 +29,8 @@
                     </ul>
                 </div>
                 <div class="modal-footer center-align">
-                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Zustimmen und Schliessen</a>
-                    <a href="#" class="modal-close btn orange row l6 xl6 s6">Abbrechen</a>
+                    <a href="#" class=" center-align modal-close btn orange row l6 xl6 s6">Zustimmen und Schliessen</a>
+                    <a href="#" class=" center-align modal-close btn orange row l6 xl6 s6">Abbrechen</a>
                 </div>
             </div>
         </div>
