--- a/src/frontend/views/partials/filterOffer.hbs
+++ b/src/frontend/views/partials/filterOffer.hbs
@@ -55,7 +55,7 @@
                pattern="[0-9]{3}0" onchange="handleChange(this);">
     </div>
     <!-- Rasse -->
-    <div class="row">
+   <!-- <div class="row">
 
         <label for="breed">Rasse</label>
         <select name="breed" class="filterDropDowns" id="breed">
@@ -63,7 +63,7 @@
                 <option value="{{this.uuid}}">{{this.name}}</option>
             {{/each}}
         </select>
-    </div>
+    </div>-->
 
     <!-- Groesse -->
 
