--- a/src/frontend/views/searchHelper.hbs
+++ b/src/frontend/views/searchHelper.hbs
@@ -13,15 +13,16 @@
 
         <div class="row ">
             <div class="col s12 l3 xl3 filteroffer">
-                {{>filterHelper}}
+                {{>filterHelper }}
             </div>
             <div class="col s1 l1 xl1">
             </div>
             <div class="col s12 l8 xl8 filteroffer">
-                {{>containerOffer_Customer}}
+                {{>listLayout bool=true helperarr=helper}}
             </div>
         </div>
     </div>
+</div>
 
 
 {{>bottomInclude}}
