--- a/src/frontend/views/partials/containerOffer_Customer.hbs
+++ b/src/frontend/views/partials/containerOffer_Customer.hbs
@@ -5,7 +5,7 @@
         </div>
         <div class="card-stacked" id="info">
             <div class="card-content">
-                <p class="flow-text">Name: {{this.animalname}}</p>
+                <p class="flow-text">Name: {{offerarr.}}</p>
                 <p class="flow-text">Größe: {{this.size}}</p>
                 <p class="flow-text">Gewicht: {{this.weight}}</p>
             </div>
