Create Offer Data Fix

--- a/src/frontend/views/createSearch.hbs
+++ b/src/frontend/views/createSearch.hbs
@@ -40,7 +40,7 @@
                 <div class="col l6 input-field">
                     <h5>Tier(e) auswählen</h5>
                     <div>
-                        <a>Tier(e) hinzufügen</a>
+                        <a href="/create-animal">Tier(e) hinzufügen</a>
                     </div>
                 </div>
             </div>
