--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -6,7 +6,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <form class="registerForm col l12" method="post" action="/register/submit">
+        <form class="registerForm col l12" method="post" action="/register/submit" name="registerForm">
             <div class="row">
                 <div class="input-field col l6">
                     <input id="firstNameRegister" type="text" name="firstNameRegister"
@@ -42,15 +42,8 @@
             </div>
 
             <div class="row">
-                <div class="input-field col l12 file-field">
-                    <div class="file-path-wrapper col l10">
-                        <input class="file-path validate" type="text" name="fileRegister"
-                               placeholder="Profilbild auswählen"/>
-                    </div>
-                    <div class="btn col l2">
-                        <span>Browse</span>
-                        <input type="file"/>
-                    </div>
+                <div class="input-field col l12">
+                    <input class="input-field" type="file" name="fileRegister" id="fileRegister">
                 </div>
             </div>
 
