Added File Support Search Entrys may be added now

--- a/src/frontend/views/createAnimal.hbs
+++ b/src/frontend/views/createAnimal.hbs
@@ -7,7 +7,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <form class="col l12" method="post" action="/create-animal/submit">
+        <form class="col l12" method="post" action="/create-animal/submit" enctype="multipart/form-data">
             <div class="row">
                 <div class="input-field col l12">
                     <select name="animalSpecies">
@@ -24,15 +24,8 @@
                     <label for="animalName">Name</label>
                     <input type="text" id="animalName" name="animalName">
                 </div>
-                <div class="input-field col l6 file-field">
-                    <div class="file-path-wrapper col l10">
-                        <input class="file-path validate" type="text"
-                               placeholder="Profilbild auswählen"/>
-                    </div>
-                    <div class="btn col l2">
-                        <span>Browse</span>
-                        <input type="file"/>
-                    </div>
+                <div class="input-field col l6">
+                    <input type="file" name="animalFile" id="animalFile">
                 </div>
             </div>
             <div class="row">
