--- a/src/frontend/views/register.hbs
+++ b/src/frontend/views/register.hbs
@@ -6,7 +6,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <form class="registerForm col l12" method="post" action="/register/submit" name="registerForm">
+        <form class="registerForm col l12" method="post" action="/register/submit" name="registerForm" enctype="multipart/form-data">
             <div class="row">
                 <div class="input-field col l6">
                     <input id="firstNameRegister" type="text" name="firstNameRegister"
@@ -43,7 +43,7 @@
 
             <div class="row">
                 <div class="input-field col l12">
-                    <input class="input-field" type="file" name="fileRegister" id="fileRegister">
+                    <input type="file" name="fileRegister" id="fileRegister">
                 </div>
             </div>
 
