--- a/src/frontend/views/userprofile.hbs
+++ b/src/frontend/views/userprofile.hbs
@@ -9,7 +9,7 @@
 <div class="container">
     <div class="row">
         <div id="userProfileImageWrapper" class="col l4 s12">
-            <img src="{{userImage}}" alt="Nutzer Profilbild" id="user-profile-img" class="col l4 s12">
+            <img src="/uploads/{{image}}" alt="Nutzer Profilbild" id="user-profile-img" class="col l4 s12">
         </div>
         <div class="col l8 s12">
             <h3>{{textHeadline}}</h3>
